--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,8 @@ dependencies:
   carousel_slider: ^4.2.1
   styled_widget: ^0.4.1
   zoom_widget: ^2.0.0
-  flutter_html: ^0.11.1
+  flutter_html: ^3.0.0-alpha.5
+  pdf: ^3.8.4
   
 dev_dependencies:
   flutter_test:
